--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,21 @@
 
 @media screen and (max-width: 600px) {
   .bg{
-    background-image: url('/images/carrom-2.webp');
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
+  
     height: 30vh;
+  }
+}
+.bg-2{
+  background-image: url('/images/carrom-2.webp');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  height: 100vh;
+}
+
+@media screen and (max-width: 600px) {
+  .bg-2{
+    background-image:none;
+    background-color: white;
+ 
   }
 }
